sukanta: demo page-2 ui changes

--- a/demo2.mdx
+++ b/demo2.mdx
@@ -1,21 +1,14 @@
-<Navbar>
-  <NavbarLogo>
-    <Image src="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/8faab22a-logo-w-copy-3x.svg" />
-  </NavbarLogo>
-  <NavbarNavigation>
-    <Button rounded classes="btn-sm">
-      Get Started
-    </Button>
-    <Button outline rounded classes="btn-sm">
-      Login
-    </Button>
-  </NavbarNavigation>
-</Navbar>
+<Header2
+  icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/8faab22a-logo-w-copy-3x.svg"
+  nav="Get Started,Login"
+/>
 <Section center>
-  <Heading variant="h2">Virtual cards</Heading>
-  <Heading variant="h4">the smartest way to manage your subscriptions</Heading>
-  Experience the easiest & smartest way to manage, track & control online spends
-  for your business in real-time with Open’s virtual cards.
+  <InfoHeading variant="h2">Virtual cards</InfoHeading>
+  <InfoSubHeader>the smartest way to manage your subscriptions</InfoSubHeader>
+  <InfoText>
+    Experience the easiest & smartest way to manage, track & control online
+    spends for your business in real-time with Open’s virtual cards.
+  </InfoText>
   <Button outline rounded classes="btn-md">
     Get Started
   </Button>
@@ -26,40 +19,37 @@
     classes="h-1/2 w-1/2"
     center
   />
-  <Heading variant="h4">Used for every online purchase</Heading>
-  <TwoCols col="3">
-    <Button
+  <InfoText>Used for every online purchase</InfoText>
+  <ThreeCols>
+    <InfoCard
       outline
-      classes="btn-lg"
       icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
     >
       SaaS subscriptions
-    </Button>
-    <Button
+    </InfoCard>
+    <InfoCard
       outline
-      classes="btn-lg"
       icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
     >
       Online ad spends
-    </Button>
-    <Button
+    </InfoCard>
+    <InfoCard
       outline
-      classes="btn-lg"
       icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
     >
       Cloud infrastructure
-    </Button>
-  </TwoCols>
+    </InfoCard>
+  </ThreeCols>
 </Section>
 <Section center>
   <TwoCols>
-    <Box classes="flex flex-col justify-center">
-      <Heading variant="h2">What is a virtual card?</Heading>
-      <Heading variant="h4">
+    <Box>
+      <InfoHeading>What is a virtual card?</InfoHeading>
+      <InfoText>
         A virtual card is a unique & digitally generated 16-digit credit card
         number that lets you pay for all your subscriptions. Your card number is
         always private, thus reducing fraud risks.
-      </Heading>
+      </InfoText>
     </Box>
     <Image
       src="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/f9efac63-accounting-3-2x_1000000000000000000028.png"
@@ -69,46 +59,42 @@
   </TwoCols>
 </Section>
 <Section classes="px-12">
-  <Heading variant="h2">Simplify your SaaS spends</Heading>
-  <Heading variant="h4">
+  <InfoHeading>Simplify your SaaS spends</InfoHeading>
+  <InfoText>
     Create a unique virtual card for every subscription your business uses,
     assign an owner & set a monthly budget.
-  </Heading>
+  </InfoText>
   <Button outline rounded classes="btn-md">
     Get Started
   </Button>
 </Section>
 <Section center>
   <TwoCols>
-    <Box classes="flex flex-col justify-center p-12">
-      <Button
+    <Box>
+      <InfoCard
         outline
-        classes="btn-lg"
         icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
       >
-        Online ad spends
-      </Button>
-      <Button
+        Get a unique virtual card for every subscription
+      </InfoCard>
+      <InfoCard
         outline
-        classes="btn-lg"
         icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
       >
-        Online ad spends
-      </Button>
-      <Button
+        Manage recurring payments with ease
+      </InfoCard>
+      <InfoCard
         outline
-        classes="btn-lg"
         icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
       >
-        Online ad spends
-      </Button>
-      <Button
+        Never miss a payment
+      </InfoCard>
+      <InfoCard
         outline
-        classes="btn-lg"
         icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
       >
-        Online ad spends
-      </Button>
+        Never go over budget
+      </InfoCard>
     </Box>
     <Image
       src="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/aff13b05-group-11-2x-2_1000000000000000000028.png"
@@ -118,13 +104,199 @@
   </TwoCols>
 </Section>
 <Section center>
-  <Heading variant="h2">Never pay twice</Heading>
-  <Heading variant="h4">
-    Get full visibility of the total no. of subscriptions your business pays
-    for. Track who has purchased which subscription and for how much. Avoid
-    duplicate costs.
-  </Heading>
+  <InfoHeading variant="h2">Spending is rewarding</InfoHeading>
+  <InfoText>
+    Now earn rewards for every subscription payment your business makes.
+    Automate your payments and get rewarded each time.
+  </InfoText>
   <Button outline rounded classes="btn-md">
     Get Started
   </Button>
 </Section>
+<Section center>
+  <TwoCols>
+    <Box>
+      <InfoCard
+        outline
+        icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
+      >
+        Discover exclusive offers on subscriptions curated for your business
+      </InfoCard>
+      <InfoCard
+        outline
+        icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
+      >
+        Earn cashback and collect your rewards in your Open account
+      </InfoCard>
+      <InfoCard
+        outline
+        icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
+      >
+        Never miss a payment
+      </InfoCard>
+      <InfoCard
+        outline
+        icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
+      >
+        Renew or pay for a new subscription with Open’s virtual card
+      </InfoCard>
+    </Box>
+    <Image
+      src="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/4f3dd6c0-brand-offers-open-circle_10hp0dh000000000000028.png"
+      classes="h-1/2"
+      center
+    />
+  </TwoCols>
+</Section>
+<Section classes="px-12">
+  <InfoHeading>Real-time visibility for every online purchase</InfoHeading>
+  <InfoText>
+    With Open’s virtual cards, now you can track who paid for what, when & how
+    much in real-time. No more wasting hours on tracking receipts.
+  </InfoText>
+</Section>
+<Section center>
+  <TwoCols>
+    <Box classes="p-0">
+      <TwoCols>
+        <InfoCard
+          outline
+          icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
+        >
+          Never miss a payment
+        </InfoCard>
+        <InfoCard
+          outline
+          icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
+        >
+          Never miss a payment
+        </InfoCard>
+      </TwoCols>
+      <TwoCols>
+        <InfoCard
+          outline
+          icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
+        >
+          Never miss a payment
+        </InfoCard>
+        <InfoCard
+          outline
+          icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
+        >
+          Never miss a payment
+        </InfoCard>
+      </TwoCols>
+    </Box>
+    <Image
+      src="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/d5ee9d71-screenshot-2020-12-11-at-8-21-35-pm_10du0gs0cm0gr00f001028.png"
+      classes="h-1/2"
+      center
+    />
+  </TwoCols>
+</Section>
+<Section classes="px-12">
+  <InfoHeading>Automated bookkeeping done right</InfoHeading>
+  <InfoText>
+    Get complete visibility into your SaaS expenses, reconcile & file expense
+    reports automatically with real-time synchronization.
+  </InfoText>
+  <Button outline rounded classes="btn-md">
+    Get Started
+  </Button>
+</Section>
+<Section center>
+  <TwoCols>
+    <Box>
+      <InfoCard
+        outline
+        icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
+      >
+        Automatically categorize all your SaaS expenses
+      </InfoCard>
+      <InfoCard
+        outline
+        icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
+      >
+        Set custom tags for fast & easy reconciliation
+      </InfoCard>
+      <InfoCard
+        outline
+        icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/cb625028-categorize-saas-expenses.svg"
+      >
+        Automate accounting with plug-in for 3rd party software like Tally
+      </InfoCard>
+    </Box>
+    <Image
+      src="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/aff13b05-group-11-2x-2_1000000000000000000028.png"
+      classes="h-1/2"
+      center
+    />
+  </TwoCols>
+</Section>
+<Section center>
+  <InfoHeading variant="h2">Never pay twice</InfoHeading>
+  <InfoText>
+    Get full visibility of the total no. of subscriptions your business pays
+    for. Track who has purchased which subscription and for how much. Avoid
+    duplicate costs.
+  </InfoText>
+  <Button outline rounded classes="btn-md">
+    Get Started
+  </Button>
+</Section>
+<Section center>
+  <TwoCols>
+    <Box>
+      <InfoHeading left>Detect & stop fraud</InfoHeading>
+      <InfoText left>
+        With Open’s virtual cards, you don’t need to share your credit card
+        number anymore. Keep your information private and reduce the risk of a
+        data breach or fraud.
+      </InfoText>
+    </Box>
+    <Image
+      src="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/f9efac63-accounting-3-2x_1000000000000000000028.png"
+      classes="h-1/2"
+      center
+    />
+  </TwoCols>
+</Section>
+<Section classes="px-12">
+  <InfoHeading>How virtual cards work</InfoHeading>
+  <InfoText>
+    Sign up for your Open account & complete KYC. Invite your entire team on
+    Open & assign roles.
+  </InfoText>
+  <Button outline rounded classes="btn-md">
+    Get Started
+  </Button>
+</Section>
+<Section center>
+  <TwoCols>
+    <Box>
+      <InfoHeading left>Not just a virtual card</InfoHeading>
+      <InfoText left>
+        Open’s virtual card comes integrated with an online bank account that
+        helps you manage banking, payments, payouts, offline expenses, and
+        accounting - from ONE place!
+      </InfoText>
+    </Box>
+    <Image
+      src="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/f9efac63-accounting-3-2x_1000000000000000000028.png"
+      classes="h-1/2"
+      center
+    />
+  </TwoCols>
+</Section>
+<Footer2
+  icon="https://d9hhrg4mnvzow.cloudfront.net/register.open.money/virtual_card/8faab22a-logo-w-copy-3x.svg"
+  address="Open Financial Technologies,\nTower 2, 3rd floor, RGA Tech Park,\nSarjapur Road, Bengaluru,\nKarnataka - 560035"
+  companyPages="about,carrer,blog,terms&condition"
+  companyFeatures="accounting,cards,payments"
+  companyProducts="freelancers,startups,smes,developers"
+  companyEmail="mail@companydomain.com"
+  facebook="/"
+  twitter="/"
+  instagram="/"
+  linkiden="/"
+/>
